<resources>
    <string name="app_name">Core App</string>

    <!-- Screen Title -->
    <string name="title_welcome">Welcome</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_students">Students</string>
    <string name="title_financial">Financial</string>
    <string name="title_more">More</string>
    <string name="title_login">Login</string>
    <string name="title_new_student">New Student</string>
    <string name="title_edit_student">Edit Student</string>
    <string name="title_student_detail">Student Detail</string>

    <!-- Action -->
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="about">About</string>

    <!-- Alerts -->
    <string name="create_account_failed_title">Something went wrong</string>
    <string name="create_account_failed_message"> Error when creating a new account</string>
    <string name="email_needed_error_message">The email must be filled in</string>
    <string name="email_not_valid_error_message">The email is not valid</string>
    <string name="password_needed_error_message">The password must be filled in</string>
    <string name="password_not_valid_error_message">The password is not valid</string>
    <string name="new_student_failed_title">Error saving new student</string>
    <string name="new_student_save_succeeded_message">New student saved!</string>
    <string name="new_student_update_succeeded_message">Student updated!</string>
    <string name="get_all_students_failed_title">Error getting all students</string>
    <string name="update_student_alert_title">Update Student</string>
    <string name="update_student_alert_message">By clicking SAVE you will update the current student.</string>
    <string name="delete_student_alert_title">Delete Student</string>
    <string name="delete_student_alert_message">By clicking DELETE AVE you will permanently delete the current student.</string>
    <string name="delete_student_succeeded">Student deleted!</string>

    <!-- User -->
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="new_account">New Account</string>
    <string name="logout">Logout</string>

    <!-- Student -->
    <string name="student_status_active">Active</string>
    <string name="student_status_inactive">Inactive</string>
    <string name="student_status_on_pause">On Pause</string>
    <string name="student_payment_status_paid">Paid</string>
    <string name="student_payment_status_pending">Pending</string>
    <string name="student_add_button">Student Add Button</string>

    <string name="student_name_label">Name</string>
    <string name="student_birth_date_label">Birth date</string>
    <string name="student_enrollment_date_label">Enrollment date</string>
    <string name="student_payment_due_date_label">Payment due date</string>
    <string name="student_modality_label">Modality</string>
    <string name="student_plan_label">Plan</string>
    <string name="student_status_label">Status</string>
    <string name="student_payment_status_label">Payment status</string>

    <string name="student_upcoming_birthdays">Upcoming birthdays</string>
    <string name="student_tuition">Tuition</string>
    <string name="student_all">All students</string>
    <string name="person_image">Person image</string>

    <string name="student_payment_due_day">Day %s</string>
    <string name="college_class_name">Disciplina: Programação para Web III</string>
    <string name="class_student_name">Aluno: Mateus Vagner</string>
    <string name="app_description">App: Um aplicativo focado para gestão de estúdios de Pilates de pequeno a médio porte.</string>

</resources>
