<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/main">

    <fragment
        android:id="@+id/main"
        android:name="com.pw3.coreapp.ui.main.MainFragment"
        android:label="@string/title_welcome"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_main_to_students"
            app:destination="@id/students"
            app:popUpTo="@+id/main"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_main_to_login"
            app:destination="@id/login" />
        <action
            android:id="@+id/action_main_to_newAccount"
            app:destination="@id/newAccount" />
    </fragment>

    <fragment
        android:id="@+id/students"
        android:name="com.pw3.coreapp.ui.students.allStudents.StudentsFragment"
        android:label="@string/title_students"
        tools:layout="@layout/fragment_students">
        <action
            android:id="@+id/action_students_to_newStudentFragment"
            app:destination="@id/newStudentFragment" />
        <action
            android:id="@+id/action_students_to_editStudentFragment"
            app:destination="@id/editStudentFragment" />
    </fragment>

    <fragment
        android:id="@+id/calendar"
        android:name="com.pw3.coreapp.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/financial"
        android:name="com.pw3.coreapp.ui.financial.FinancialFragment"
        android:label="@string/title_financial"
        tools:layout="@layout/fragment_financial" />

    <fragment
        android:id="@+id/more"
        android:name="com.pw3.coreapp.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />

    <fragment
        android:id="@+id/login"
        android:name="com.pw3.coreapp.ui.user.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/newAccount"
        android:name="com.pw3.coreapp.ui.user.CreateAccountFragment"
        android:label="@string/create_account"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/newStudentFragment"
        android:name="com.pw3.coreapp.ui.students.newStudent.NewStudentFragment"
        android:label="@string/title_new_student"
        tools:layout="@layout/fragment_new_student" />

    <fragment
        android:id="@+id/editStudentFragment"
        android:name="com.pw3.coreapp.ui.students.editStudent.EditStudentFragment"
        android:label="@string/title_edit_student"
        tools:layout="@layout/fragment_new_student">
        <argument
            android:name="student"
            app:argType="com.pw3.coreapp.model.Student" />
    </fragment>

</navigation>
