<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/spacing_m">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:cardCornerRadius="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:clipToOutline="true"
            android:contentDescription="@string/person_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ifrspoa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="s" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/college_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_base"
        android:gravity="center"
        android:text="@string/college_class_name"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/card_image" />

    <TextView
        android:id="@+id/class_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_s"
        android:gravity="center"
        android:text="@string/class_student_name"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/college_class" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_s"
        android:gravity="center"
        android:textColor="@color/light_primary"
        android:text="@string/app_description"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/class_student" />


</androidx.constraintlayout.widget.ConstraintLayout>
