<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_m"
        tools:context=".ui.students.newStudent.NewStudentFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/student_name_label"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_birth_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_m"
            android:hint="@string/student_birth_date_label"
            app:layout_constraintTop_toBottomOf="@id/layout_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:maxLength="10" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_enrollment_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_m"
            android:hint="@string/student_enrollment_date_label"
            app:layout_constraintTop_toBottomOf="@id/layout_birth_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_enrollment_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:maxLength="10" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_payment_due_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_m"
            android:hint="@string/student_payment_due_date_label"
            app:layout_constraintTop_toBottomOf="@id/layout_enrollment_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_payment_due_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_modality"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_m"
            android:hint="@string/student_modality_label"
            app:layout_constraintTop_toBottomOf="@id/layout_payment_due_date">

            <AutoCompleteTextView
                android:id="@+id/text_modality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:labelFor="@id/text_modality" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_plan"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_m"
            android:hint="@string/student_plan_label"
            app:layout_constraintTop_toBottomOf="@id/layout_modality">

            <AutoCompleteTextView
                android:id="@+id/text_plan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:labelFor="@id/text_plan" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_status"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_m"
            android:hint="@string/student_status_label"
            app:layout_constraintTop_toBottomOf="@id/layout_plan">

            <AutoCompleteTextView
                android:id="@+id/text_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:labelFor="@id/text_status" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_payment_status"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_m"
            android:hint="@string/student_payment_status_label"
            app:layout_constraintTop_toBottomOf="@id/layout_status">

            <AutoCompleteTextView
                android:id="@+id/text_payment_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:labelFor="@id/text_payment_status" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_l"
            android:text="@string/save"
            app:layout_constraintTop_toBottomOf="@id/layout_payment_status" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>